--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Starring YOU Video Booth</title>
+    <title>Starting your Video Booth</title>
     <meta charset="utf-8">
     <script src="videobooth.js"></script>
     <link rel="stylesheet" href="videobooth.css">
